--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Dzień dobry! </h1>
-    <p> Hola, que tal> </p>
+    <p> Hola, que tal? Como estan? </p>
     
   </body>
 </html>
